# CPathTracer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
pathtracer/: bmpwriter.c  bmpwriter.h  camera.c  camera.h  hitinfo.h  main.c  material.c  material.h  material_internal.h  material_lightning.c  ptmath.c  ptmath.h  ptmath_float.c  ptmath_ray.c  ptmath_simd.c  ptmath_soa.c  ptmath_vec3f.c  random.c  random.h  scene.c  scene.h  scene_boxes.c  scene_internal.c  scene_internal.h  scene_spheres.c  tracer.c  tracer.h
